# hala-graphics

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/canvas/: Cargo.toml  build.rs
crates/canvas/proto/: opcode.proto
crates/canvas/src/: euclid.rs  image.rs  lib.rs  path.rs
crates/canvas/src/canvas2d/: canvas.rs  geometry.rs  mod.rs  paint.rs  paragraph.rs  path.rs
crates/canvas/src/proto/: opcode.rs  paint.rs  path.rs  text.rs
crates/compositor/: Cargo.toml
crates/compositor/benches/: wgpu_bench.rs
crates/compositor/src/: compositor.rs  errors.rs  lib.rs  macros.rs  primitives.rs  wgpu.rs
crates/compositor/src/wgpu/: canvas.rs  canvas_render.rs  capture.rs  compositor.rs  mod.rs  syscall.rs  wgpu_syscall.rs
crates/compositor/src/wgpu/layers/: canvas.rs
crates/compositor/src/wgpu/rendering/: canvas.rs
crates/cotati/: Cargo.toml
crates/cotati/benches/: primitives.rs
crates/cotati/src/: color.rs  draw.rs  drawing.rs  errors.rs  lib.rs  renderer.rs  view.rs
crates/cotati/src/combinator/: aspect.rs  canvas.rs  circle.rs  entity.rs  graphics.rs  label.rs  mod.rs  paint.rs  tuple.rs  viewbox.rs
crates/cotati/src/draw/: circle.rs  draw.rs  mod.rs  paint.rs  tuple.rs
crates/cotati/src/draws/: aspect.rs  canvas.rs  circle.rs  mod.rs  paint.rs  tuple.rs  viewbox.rs
crates/cotati/src/ir/: animation.rs  color.rs  compositing.rs  context.rs  dimension.rs  filter.rs  font.rs  gradients.rs  ir.rs  layer.rs  mod.rs  painting.rs  path.rs  pattern.rs  primitives.rs  shapes.rs  text.rs  transform.rs
crates/cotati/src/primitives/: angle.rs  aspect.rs  canvas.rs  color.rs  length.rs  mod.rs  point.rs  transform.rs  unit.rs
crates/cotati/src/renderers/: mock.rs  mod.rs  renderer.rs  svg.rs
crates/cotati/src/svg/: mod.rs
crates/cotati/src/svg/render/: walker.rs
crates/ecs/: Cargo.toml
crates/ecs/benches/: bench_ecs.rs
crates/ecs/src/: lib.rs  primitives.rs  world.rs
crates/graphics/: Cargo.toml
crates/graphics/benches/: compositing.rs  transfer_data_bench.rs
crates/graphics/examples/: svg.rs
crates/graphics/src/: errors.rs  lib.rs  macros.rs  primitives.rs  svg.rs  wgpu.rs
crates/graphics/src/compositor/: compositor.rs
crates/graphics/src/compositor/component/: canvas.rs  capture.rs  layer.rs  mod.rs  redraw.rs  svg.rs  transform.rs
crates/graphics/src/compositor/system/: mod.rs  svg.rs
crates/graphics/src/render/: capture.rs  component.rs  compositor.rs  mod.rs  primitives.rs  render.rs  svg.rs  to_file.rs  to_png.rs
crates/graphics/src/render/system/: mod.rs  svg.rs
crates/kree/: Cargo.toml
crates/kree/src/: errors.rs  lib.rs  primitives.rs
crates/kree/src/compositor/: mod.rs
crates/kree/src/compositor/component/: canvas.rs  mod.rs
crates/kree/src/compositor/system/: canvas.rs
crates/opcode/: Cargo.toml
crates/opcode/proto/: .protolint.yaml  opcode.proto
crates/opcode/src/: lib.rs
crates/opcode/src/proto/: canvas.rs  mod.rs  opcode.rs
crates/resvg-wgpu/: Cargo.toml
crates/svg/: Cargo.toml
crates/svg/src/: errors.rs  lib.rs  render.rs
crates/tessellator/: Cargo.toml
crates/tessellator/src/: lib.rs  lyon.rs
crates/wgpu/: Cargo.toml
crates/wgpu-derive/: Cargo.toml
crates/wgpu-derive/src/: lib.rs
crates/wgpu-derive/tests/: derive_test.rs
crates/wgpu/examples/: winit.rs
crates/wgpu/src/: buffer.rs  canvas.rs  engine.rs  lib.rs  render.rs  shader.wgsl  test.rs  winit_app.rs
hala-canvas/: Cargo.toml  build.rs
hala-canvas/proto/: .protolint.yaml  canvas.proto
hala-canvas/src/: euclid.rs  lib.rs
hala-canvas/src/canvas2d/: canvas.rs  geometry.rs  image.rs  mod.rs  paint.rs  paragraph.rs  path.rs
hala-canvas/src/proto/: canvas.rs  mod.rs
