[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/hala-graphics"
version = "0.1.2"

[workspace.dependencies]
# errors
thiserror = "^1"
log = "^0.4"
pretty_env_logger = "^0.5"
# serde frameworks
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
# graphics
lyon = "^1.0"
winit = "^0.30"
wgpu = "^22.1.0"
#futures
futures = "^0.3"
futures-test = "^0.3"
clap = "^4.5"
regex = "1.10.6"
#utils
bytemuck = "1.16.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
async-trait = "0.1.82"
spin = "0.9.8"
png = "0.17.11"
ttf-parser = "0.24.1"
svg = "0.17.0"
euclid = "0.22.11"
divan = "0.1.14"
xml-rs = "0.8.22"
roxmltree = "0.20.0"
# proc-macro
quote = "^1"
proc-macro2 = "^1"
heck = "^0.5"
syn = "^2"
#
wgpu-derive = { path = "./crates/wgpu-derive", version = "^0.1" }
ecsrs = { path = "./crates/ecs", version = "^0.1" }
