[package]
description = "Core graphic api for Hala OS"
edition.workspace = true
name = "hala-canvas"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {workspace = true}
libm = {workspace = true}
serde = {workspace = true}

[features]
default = ["tessellator", "serde_support"]
serde_support = []
tessellator = []
