[package]
description = "Core graphic api for Hala OS"
edition.workspace = true
name = "hala-canvas"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {workspace = true}
libm = {workspace = true}
log = {workspace = true}
serde = {workspace = true}

[dev-dependencies]
pretty_env_logger = {workspace = true}
serde_json = {workspace = true}

[features]
default = ["serde_support", "canvas2d_support", "canvas3d_support"]

canvas2d_support = []
canvas3d_support = []
serde_support = []

no_std = ["glam/libm", "serde/alloc"]
