[package]
description = "A canvas/ui compositor for hala graphics system."
documentation = "https://docs.rs/hala-graphics-compositor"
edition.workspace = true
license = "MIT"
name = "hala-graphics-compositor"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }
lyon = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
#wgpu
wgpu = { workspace = true, optional = true }
spin = { workspace = true, optional = true }

[dev-dependencies]
futures-test = { workspace = true }
pretty_env_logger = { workspace = true }
png = { workspace = true }

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu", "spin"]

[[bench]]
name = "wgpu_bench"
harness = false
