[package]
description = "A full features svg render backend with kree"
documentation = "https://docs.rs/cotati"
edition.workspace = true
license = "MIT"
name = "cotati"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[dependencies]
thiserror = { workspace = true }
xml-rs = { workspace = true }
