[package]
description = "cotati is a general-purpose vector drawing interface that does not restrict binding to a back-end renderer."
documentation = "https://docs.rs/cotati"
edition.workspace = true
license = "MIT"
name = "cotati"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[dependencies]
thiserror = { workspace = true }
xml-rs = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
iref = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
divan = { workspace = true }

[features]

[[bench]]
name = "primitives"
harness = false
