[package]
description = "cotati is a general-purpose vector graphic language system"
documentation = "https://docs.rs/cotati"
edition.workspace = true
license = "MIT"
name = "cotati"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
nom = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
divan = { workspace = true }

[features]
default = ["dsl", "ir", "serde"]
ir = []
dsl = ["nom", "ir"]
serde = ["dep:serde"]
