[package]
description = "A cross plaform graphics system backed by wgpu."
documentation = "https://docs.rs/kree"
edition.workspace = true
license = "MIT"
name = "kree"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[dependencies]
wgpu = { workspace = true }
lyon = { workspace = true }
thiserror = { workspace = true }
spin = { workspace = true }
euclid = { workspace = true }
wgpu-derive = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
futures = { workspace = true }
png = { workspace = true }
regex = { workspace = true }
ecsrs = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
futures-test = { workspace = true }
divan = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[features]

[[bench]]
name = "compositing"
harness = false
