[package]
description = "A svg rendering with wgpu backend."
documentation = "https://docs.rs/resvg-wgpu"
edition.workspace = true
license = "MIT"
name = "resvg-wgpu"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[dependencies]
usvg = { workspace = true }
wgpu = { workspace = true }
