[package]
description = "Hala graphics tessellator implementation."
edition.workspace = true
name = "hala-tessellator"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hala-canvas = { workspace = true }
lyon = { workspace = true }

[features]
no_std = ["hala-canvas/no_std"]
