[package]
description = "Some useful proc-macros for wgpu programs."
documentation = "https://docs.rs/wgpu-derive"
edition.workspace = true
license = "MIT"
name = "wgpu-derive"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
