[package]
description = "The hala-canvas rendering backend using wgpu"
edition.workspace = true
name = "hala-canvas-wgpu"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = { workspace = true }
winit = { workspace = true, optional = true }
wgpu = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }

[features]
default = ["wgpu_test"]
wgpu_test = ["winit"]

[dev-dependencies]
pretty_env_logger = { workspace = true }
